--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/item-3.jpg" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Professional Editting</h4>
+                                                <h4>Professional Editing</h4>
                                                 <p>Am able to tranform simple low quality photos into spectacular ones.</p>
                                             </div>
                                         </div>
