--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ https://templatemo.com/tm-528-elegance
                                         <div class="about-contentbox">
                                             <div class="animate" data-animate="fadeInUp">
                                                 <span>About Me</span>
-                                                <p>Am a web and Graphics Designer.I believe digital innovation comes from experimentation and understanding user experiences.My passion is design and i love what i do.</p>
+                                                <p>Am a graphics designer with a strong focus on producing cutting edge imagery, artwork and creative direction. My aim is to develop distinct work which pushes boundaries and communicate engaging ideas.</p>
                                             </div>
                                             <div class="facts-list owl-carousel">
                                                 <div class="item animate" data-animate="fadeInUp">
