--- a/index.html
+++ b/index.html
@@ -139,56 +139,50 @@ https://templatemo.com/tm-528-elegance
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-paint-brush" aria-hidden="true"></i></span>
                                             <h3>Graphics Design</h3>
-                                            <p>Good graphic design isn’t all about pro-minimalism or trying to be edgy in order to stand out.It represents a chance for your company’s core message.</p>
+                                            <p>I Help My Clients in Management of the Complete Design Process, From Conceptualization to Delivery</p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-desktop" aria-hidden="true"></i></span>
-                                            <h3>Web Designing</h3>
-                                            <p>I am passionate about quality content and streamlined UX. Pairing the two together takes a whole lot of time, energy, dedication, and creativity.</p>
+                                            <h3>Social Media Management</h3>
+                                            <p>Recommending And Consulting With Clients On The Most Appropriate marketing Options Based On Their Overall Marketing Goals.</p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-cube" aria-hidden="true"></i></span>
                                             <h3>Logo Design</h3>
-                                            <p>In an age when competitors are a dime a dozen, you need to rely on branding services that push the value of every dollar invested as far as it can go.</p>
+                                            <p>You Need A Good Quality Logo For Your Brand To Stand Out. I Will Design One for You Based On Your Needs.</p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
-                                            <h3>Motion Graphics</h3>
-                                            <p>Am passionate about creating colorful and aesthetic design and illustrations that I animate to tell my clients’ very special stories. </p>
+                                            <h3>Video Graphics</h3>
+                                            <p>Always Creating Colorful and Aesthetic Designs and Video Illustrations for My Clients E.G. Explainer Videos. </p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-comments" aria-hidden="true"></i></span>
                                             <h3>Fast Support</h3>
-                                            <p>I work closely with my clients, creating opportunities for discussion and exchange at each step of the production process. </p>
+                                            <p>I Work Closely With My Clients, Creating Opportunities For Discussion And Feedback At Each Step Of The Production Process. </p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-database" aria-hidden="true"></i></span>
                                             <h3>24-hour Up Time</h3>
-                                            <p>The ultimate priority of S-graphics is to know that my clients are happy with my work.I value all business interactions</p>
+                                            <p>I Value and Dedicate Time for All My Business Interactions. That Is My Ultimate Priority</p>
                                         </div>
                                     </div>
-                                    <div class="item animate" data-animate="fadeInUp">
-                                        <div class="service-box">
-                                            <span class="service-icon"><i class="fa fa-bell" aria-hidden="true"></i></span>
-                                            <h3>Instant Upgrades</h3>
-                                            <p>You are covered. will provide assistance on any latest upgrades you want for your business </p>
-                                        </div>
-                                    </div>
+                    
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-camera" aria-hidden="true"></i></span>
                                             <h3>Always Monitoring</h3>
-                                            <p>I always ensure that i keep track of the projects that i have done for my clients.This enables me to make improvements on new models </p>
+                                            <p>Always Valuing my clients feedback.This enables me to make improvements on new models </p>
                                         </div>
                                     </div>
                                 </div>
