--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@ https://templatemo.com/tm-528-elegance
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-video-camera" aria-hidden="true"></i></span>
                                             <h3>Video Graphics</h3>
-                                            <p>Always Creating Colorful and Aesthetic Designs and Video Illustrations for My Clients E.G. Explainer Videos. </p>
+                                            <p>Always Creating Colorful and Aesthetic Designs and Video Illustrations for My Clients e.g. Explainer Videos. </p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-comments" aria-hidden="true"></i></span>
                                             <h3>Fast Support</h3>
-                                            <p>I Work Closely With My Clients, Creating Opportunities For Discussion And Feedback At Each Step Of The Production Process. </p>
+                                            <p>I Work Closely With My Clients By Creating Opportunities For Discussions And Timely Feedback At Each Step Of The Production Process. </p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
