--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/My Post.png" class="rounded" alt=""></figure>
+                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/58ef053554b42359c688849ed0425e49.png" class="rounded" alt=""></figure>
                                     </div>
                                 </div>
                             </div>
@@ -249,7 +249,7 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/dance 1.jpg" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Event Marketing</h4>
+                                                <h4>Commercial Posters</h4>
                                                 <p>Designed Posters for various Clients.Such events include Golf,Music parties,football Tournaments,Corporate events e.t.c</p>
                                             </div>
                                         </div>
@@ -257,7 +257,7 @@ https://templatemo.com/tm-528-elegance
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/My Post (6).jpg" alt="">
+                                                <img src="images/burger.png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Poster,Flyers,Busienss Cards</h4>
@@ -312,7 +312,7 @@ https://templatemo.com/tm-528-elegance
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/9.jpg" alt="">
+                                                <img src="images/BOSITE.png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4> Video Marketing</h4>
