--- a/index.html
+++ b/index.html
@@ -283,25 +283,25 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Web Development</h4>
-                                                <p>I have been able to build responsive websites that are compatible on all devices.i usually ensure your website is easy to use and keeps customers coming back.</p>
+                                                <p>I have been able to build responsive websites that are compatible on all devices.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/img-8.jpg" alt="">
+                                                <img src="images/Jontes Designs.jpg" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Quality For Work</h4>
-                                                <p>Before any project is commenced,I usually develop a fully-functional prototype so you know exactly how the final product will look like.This had made me gain confidence with my previous clients because they see value for their money</p>
+                                                <h4>Business Poster</h4>
+                                                <p>Promoted my clients businesses by designing them commercial posters to share with their customers</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/Meshack Solid Background logo.png" alt="">
+                                                <img src="images/BOSITE.png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Logo Design</h4>
@@ -312,22 +312,22 @@ https://templatemo.com/tm-528-elegance
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/BOSITE.png" alt="">
+                                                <img src="images/9.JPg" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4> Video Marketing</h4>
-                                                <p>Advertising your Business is Key in attracting prospective clients. I have successfully managed to design marketing adverts for various clients.This rages from simple posters to video graphics such as animated content.</p>
+                                                <h4>Video Graphics</h4>
+                                                <p>Designed several commercial adverts for clients running different categories of business.</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/hero.jpg" alt="">
+                                                <img src="images/DSCN9078.jpg" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Professional Editing</h4>
-                                                <p>Am able to tranform simple low quality photos into spectacular ones.</p>
+                                                <h4>Photography</h4>
+                                                <p>Previously handled urban photography projects.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -338,7 +338,7 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Professional Editing</h4>
-                                                <p>Am able to tranform simple low quality photos into spectacular ones.</p>
+                                                <p>Tranformed simple low quality photos into spectacular ones for various clients for commercial advertising.</p>
                                             </div>
                                         </div>
                                     </div>
