--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/58ef053554b42359c688849ed0425e49.png" class="rounded" alt=""></figure>
+                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/My Post(17).png" class="rounded" alt=""></figure>
                                     </div>
                                 </div>
                             </div>
@@ -239,7 +239,7 @@ https://templatemo.com/tm-528-elegance
                         <div class="col-md-8 wide-col-laptop">
                             <div class="title-block animate" data-animate="fadeInUp">
                                 <span>My Work</span>
-                                <h4>Previous Projects</h4>
+                                <h5>Previous Projects</h5>
                             </div>
                             <div class="gallery-section">
                                 <div class="gallery-list owl-carousel">
@@ -282,8 +282,8 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/Image-01-01.png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Web Development</h4>
-                                                <p>I have been able to build responsive websites that are compatible on all devices.</p>
+                                                <h4>Web Development and Management</h4>
+                                                <p>I have been able to build responsive websites that are compatible on all devices and also in maging websites for various clients</p>
                                             </div>
                                         </div>
                                     </div>
@@ -323,11 +323,11 @@ https://templatemo.com/tm-528-elegance
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/DSCN9078.jpg" alt="">
+                                                <img src="images/My Post(16)" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Photography</h4>
-                                                <p>Previously handled urban photography projects.</p>
+                                                <h4>Advertising</h4>
+                                                <p>Handled Various Product Promotion Projects</p>
                                             </div>
                                         </div>
                                     </div>
@@ -417,7 +417,7 @@ https://templatemo.com/tm-528-elegance
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
                                         <div class="contact-box">
                                             <div class="contact-row">
-                                                <i class="fa fa-map-marker"></i> Jamuhuri Estate, Nairobi Kenya
+                                                <i class="fa fa-map-marker"></i> Woodly, Nairobi Kenya
                                             </div>
                                             <div class="contact-row">
                                                 <i class="fa fa-phone"></i> +254715620610
