--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Commercial Posters</h4>
-                                                <p>Designed Posters for various Clients.Such events include Golf,Music parties,football Tournaments,Corporate events e.t.c</p>
+                                                <p>Designed Posters,business cards and bronchures for various Clients.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -312,7 +312,7 @@ https://templatemo.com/tm-528-elegance
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/9.JPg" alt="">
+                                                <img src="images/9.jpg" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Video Graphics</h4>
@@ -323,7 +323,7 @@ https://templatemo.com/tm-528-elegance
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/My Post(16)" alt="">
+                                                <img src="images/My Post(16).png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Advertising</h4>
