--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/My Post(17).png" class="rounded" alt=""></figure>
+                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/My Post (11).jpg" class="rounded" alt=""></figure>
                                     </div>
                                 </div>
                             </div>
@@ -323,7 +323,7 @@ https://templatemo.com/tm-528-elegance
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
                                             <div class="thumb">
-                                                <img src="images/My Post(16).png" alt="">
+                                                <img src="images/My Post (12).jpg" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Advertising</h4>
