--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ https://templatemo.com/tm-528-elegance
                                         <div class="about-contentbox">
                                             <div class="animate" data-animate="fadeInUp">
                                                 <span>About Me</span>
-                                                <p>Am a graphics designer with a strong focus on producing cutting edge imagery, artwork and creative direction. My aim is to develop distinct work which pushes boundaries and communicate engaging ideas.</p>
+                                                <p>I am a graphics designer with a strong focus on producing cutting edge imagery, artwork and creative direction. My aim is to develop distinct work which pushes boundaries and communicate engaging ideas.</p>
                                             </div>
                                             <div class="facts-list owl-carousel">
                                                 <div class="item animate" data-animate="fadeInUp">
@@ -117,7 +117,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/My Post (11).jpg" class="rounded" alt=""></figure>
+                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/Simon.png" class="rounded" alt=""></figure>
                                     </div>
                                 </div>
                             </div>
@@ -147,7 +147,7 @@ https://templatemo.com/tm-528-elegance
                                         <div class="service-box">
                                             <span class="service-icon"><i class="fa fa-desktop" aria-hidden="true"></i></span>
                                             <h3>Social Media Management</h3>
-                                            <p>Recommending And Consulting With Clients On The Most Appropriate marketing Options Based On Their Overall Marketing Goals.</p>
+                                            <p>Recommending And Consulting With Clients On The Most Appropriate Marketing Options Based On Their Overall Marketing Goals.</p>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
@@ -394,6 +394,18 @@ https://templatemo.com/tm-528-elegance
                                                     <h4>MarLeen</h4>
                                                     <p>"This Guy is spectacular. Never had such an experience before."</p>
                                                     <span>-Nairobi Kenya</span>
+                                                </div>                                           
+                                            </div>
+                                        </div>
+					     <div class="item animate" data-animate="fadeInUp">
+                                            <div class="testimonial-item">
+                                                <div class="client-row">
+                                                    <img src="images/55842760_10157614028883455_3491055705744474112_n.jpg" class="rounded-circle" alt="profile 2">
+                                                </div>
+                                                <div class="testimonial-content">
+                                                    <h4>Jack</h4>
+                                                    <p>"Simon’s character, talent and professionalism is amazing!! He delivered timely products beyond my expectation!  Wow! I highly recommend him."</p>
+                                                    <span>-Founder || Thatmakescents.me</span>
                                                 </div>                                           
                                             </div>
                                         </div>
