--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                     <div class="col-md-6">
-                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/Simon.png" class="rounded" alt=""></figure>
+                                        <figure class="about-img animate" data-animate="fadeInUp"><img src="images/My Profile.png" class="rounded" alt=""></figure>
                                     </div>
                                 </div>
                             </div>
@@ -403,7 +403,7 @@ https://templatemo.com/tm-528-elegance
                                                     <img src="images/55842760_10157614028883455_3491055705744474112_n.jpg" class="rounded-circle" alt="profile 2">
                                                 </div>
                                                 <div class="testimonial-content">
-                                                    <h4>Jack</h4>
+                                                    <h4>Tiffany Cogdell</h4>
                                                     <p>"Simon’s character, talent and professionalism is amazing!! He delivered timely products beyond my expectation!  Wow! I highly recommend him."</p>
                                                     <span>-Founder || Thatmakescents.me</span>
                                                 </div>                                           
