--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/burger.png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Poster,Flyers,Busienss Cards</h4>
+                                                <h4>Poster,Flyers,Business Cards</h4>
                                                 <p>Get professional designs for your posters,banners,business cards to promote your business.</p>
                                             </div>
                                         </div>
@@ -283,7 +283,7 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/Image-01-01.png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Web Development and Management</h4>
+                                                <h4>Web Development</h4>
                                                 <p>I have been able to build responsive websites that are compatible on all devices and also in maging websites for various clients</p>
                                             </div>
                                         </div>
