--- a/index.html
+++ b/index.html
@@ -430,13 +430,13 @@ https://templatemo.com/tm-528-elegance
                                     <div class="col-md-6 animate" data-animate="fadeInUp">
                                         <div class="contact-box">
                                             <div class="contact-row">
-                                                <i class="fa fa-map-marker"></i> Woodly, Nairobi Kenya
+                                                <i class="fa fa-map-marker"></i>Woodly, Nairobi Kenya
                                             </div>
                                             <div class="contact-row">
                                                 <i class="fa fa-phone"></i> +254715620610
                                             </div>
                                             <div class="contact-row">
-                                                <i class="fa fa-envelope"></i> mathekasimeon@gmail.com
+                                                <i class="fa fa-envelope"></i>symongraphics@gmail.com
                                             </div>
                                         </div>
                                     </div>
