--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ https://templatemo.com/tm-528-elegance
     <link rel="stylesheet" href="css/templatemo-style.css">
 
     <link rel="stylesheet" href="css/responsive.css">
-
+<script data-ad-client="ca-pub-3753851397787284" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     
     <body>
