--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://templatemo.com/tm-528-elegance
                 <div class="section-inner">
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
-                        <h4 class="welcome-title animate" data-animate="fadeInUp">Simon Graphics</h4>
+                        <h4 class="welcome-title animate" data-animate="fadeInUp">Simon Graphics.</h4>
                         <p class="animate" data-animate="fadeInUp">Combining Creativity With Strategic Thinking.</p>
                         <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
